CF-648: Fix missing account dropdown in mobile navigation + fix scroll overflow issues on mobile

--- a/src/shared/assets/styles/components/_layout.scss
+++ b/src/shared/assets/styles/components/_layout.scss
@@ -11,15 +11,30 @@
     padding-bottom: 0;
     position: relative;
   }
+  .responsive-menu-overlay {
+    width: 100%;
+    height: 100%;
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background: rgba(0,0,0,0.6);
+    z-index: 998;
+  }
   @media only screen and (max-width: 900px) {
     flex-direction: column;
 
     > .content {
       padding-top: 55px;
+      overflow: visible;
 
       &.overlay-active {
         overflow: hidden;
+        position: fixed;
       }
+    }
+    .responsive-menu-overlay.show {
+      display: block;
     }
   }
 }
