--- a/src/shared/assets/styles/components/_sidebar.scss
+++ b/src/shared/assets/styles/components/_sidebar.scss
@@ -62,6 +62,10 @@
   }
   .nav-section {
     margin-bottom: 16px;
+
+    &.responsive-only {
+      display: none;
+    }
   }
   [class^="icon-"], [class*=" icon-"] {
     margin-right: 4px;
@@ -99,20 +103,6 @@
     }
   }
 
-  .responsive-menu-overlay {
-    width: 100%;
-    height: 100vh;
-    display: none;
-    position: absolute;
-    top: 55px;
-    left: 0;
-    background: rgba(0,0,0,0.6);
-
-    &.show {
-      display: block;
-    }
-  }
-
   .sidebar-menu {
     flex: 1;
     overflow-y: auto;
@@ -127,8 +117,6 @@
     flex-direction: row;
     align-items: center;
     z-index: 999;
-
-
     position: fixed;
     top: 0;
     left: 0;
@@ -141,15 +129,25 @@
       display: block;
     }
 
+    .nav-section.responsive-only {
+      display: block;
+    }
+
     .sidebar-menu {
       width: 250px;
-      height: 100vh;
-      padding-top: 4px;
-      position: absolute;
-      top: 55px;
+      height: 100%;
+      position: fixed;
+      top: 0;
       right: 0;
+      margin-top: 55px;
+      padding-top: 4px;
+      padding-bottom: 55px;
       background: darken(#28303A, 5%);
       overflow: auto;
+
+      .menu-items.dropdown {
+        display: none;
+      }
 
       &.collapsed {
         display: none;
